tests/snapshots/ui_queue_render_states__queue_with_disc_one_and_track_uses_hash_format.snap
---
source: tests/ui_queue_render_states.rs
expression: frame
---
 F1 Library  │  F2 Queue  │  F3 Quick Play  │  F4             ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Queue (1) ───────────────────────────────────────────────────────────────────┐
│  1.     A [#3] - Artist [03:00]                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next                                        
n:Star playing │ m:Star selected │ a:Cho
