tests/snapshots/ui_queue_render_states__queue_with_starred_song_renders_star_indicator.snap
---
source: tests/ui_queue_render_states.rs
expression: frame
---
 F1 Library  │  F2 Queue  │  F3 Quick Play  │  F4             ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Queue (1) ───────────────────────────────────────────────────────────────────┐
│  1.   ★ A - Artist [03:00]                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next                                        
n:Star playing │ m:Star selected │ a:Cho
